fix: test second

--- a/1.html
+++ b/1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        console.log('第一次发布npm包');
+        console.log('第二次发布npm包');
     </script>
 </body>
 </html>
